tests/ui/type-alias-impl-trait/define_opaques_attr/invalid_path.rs
#![feature(type_alias_impl_trait)]

#[define_opaque(Boom)]
//~^ ERROR: cannot find type alias or associated type
fn main() {}
